tree-sitter-writeup/tree-sitter-imp/corpus/test.txt
================================================================================
skip
================================================================================
skip
--------------------------------------------------------------------------------

(program
  (stmt
    (skip)))

================================================================================
assignment
================================================================================

x := 3; skip
--------------------------------------------------------------------------------

(program
  (stmt
    (seq
      (stmt
        (asgn
          name: (id)
          (num)))
      (stmt
        (skip)))))

================================================================================
prec
================================================================================

x := 1 * 2 + 5 - 4

--------------------------------------------------------------------------------

(program
  (stmt
    (asgn
      name: (id)
      (minus
        (plus
          (times
            (num)
            (num))
          (num))
        (num)))))

================================================================================
prog
================================================================================

if x = y + 1 + 2 - y * 6 + 3 then x := x * 1; y := 0 else skip end

--------------------------------------------------------------------------------

(program
  (stmt
    (if
      condition: (eqb
        (id)
        (plus
          (minus
            (plus
              (plus
                (id)
                (num))
              (num))
            (times
              (id)
              (num)))
          (num)))
      consequent: (stmt
        (seq
          (stmt
            (asgn
              name: (id)
              (times
                (id)
                (num))))
          (stmt
            (asgn
              name: (id)
              (num)))))
      alternative: (stmt
        (skip)))))

================================================================================
while
================================================================================

while x = 5 do x := x + 1 end

--------------------------------------------------------------------------------

(program
  (stmt
    (while
      condition: (eqb
        (id)
        (num))
      body: (stmt
        (asgn
          name: (id)
          (plus
            (id)
            (num)))))))

================================================================================
comment
================================================================================

// hello world

--------------------------------------------------------------------------------

(program
  (comment))
